vendored_parsers/tree-sitter-perl/test/corpus/autoquote
================================================================================
AUTOQUOTED => EXPR
================================================================================
hello  # tree-sitter is magical!
  => 'world';
shift => 'up';
plain::bareword => 'here';
things
# this does not make all the tings explode
  =>;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (list_expression
      (autoquoted_bareword)
      (comment)
      (string_literal
        (string_content))))
  (expression_statement
    (list_expression
      (autoquoted_bareword)
      (string_literal
        (string_content))))
  (expression_statement
    (list_expression
      (bareword)
      (string_literal
        (string_content))))
  (expression_statement
    (list_expression
      (autoquoted_bareword)
      (comment))))

================================================================================
quotelike followed by =>
================================================================================
q = > only one string=;
q => 'two strings';
q=>'still two';
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (string_literal
      (string_content)))
  (expression_statement
    (list_expression
      (autoquoted_bareword)
      (string_literal
        (string_content))))
  (expression_statement
    (list_expression
      (autoquoted_bareword)
      (string_literal
        (string_content)))))

================================================================================
hash autoquoting
================================================================================
$hash{quoted};
$hash{shift};
$hash->%{thing};
@hash{thing};
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (hash_element_expression
      hash: (container_variable
        (varname))
      key: (autoquoted_bareword)))
  (expression_statement
    (hash_element_expression
      hash: (container_variable
        (varname))
      key: (autoquoted_bareword)))
  (expression_statement
    (keyval_expression
      hashref: (scalar
        (varname))
      (autoquoted_bareword)))
  (expression_statement
    (slice_expression
      hash: (slice_container_variable
        (varname))
      (autoquoted_bareword))))

================================================================================
hash autoquoting for quotelike
================================================================================
$hash{q{why would you do this?}};
$hash{q};
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (hash_element_expression
      hash: (container_variable
        (varname))
      key: (string_literal
        content: (string_content))))
  (expression_statement
    (hash_element_expression
      hash: (container_variable
        (varname))
      key: (autoquoted_bareword))))

================================================================================
indirob autoquoting
================================================================================
${bareword};
${Long::Bareword};
${q};
${^O};
${^MATCH};
${1};
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (scalar
      (varname)))
  (expression_statement
    (scalar
      (varname)))
  (expression_statement
    (scalar
      (varname)))
  (expression_statement
    (scalar
      (varname)))
  (expression_statement
    (scalar
      (varname)))
  (expression_statement
    (scalar
      (varname))))

================================================================================
autoquoting keywords
================================================================================
if =>;
for =>;
method =>;
return =>;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (list_expression
      (autoquoted_bareword)))
  (expression_statement
    (list_expression
      (autoquoted_bareword)))
  (expression_statement
    (list_expression
      (autoquoted_bareword)))
  (expression_statement
    (list_expression
      (autoquoted_bareword))))

================================================================================
autoquoting postfix
================================================================================
return unless 9001;
return unless =>;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (postfix_conditional_expression
      (return_expression)
      (number)))
  (expression_statement
    (return_expression
      (autoquoted_bareword))))

================================================================================
autoquoting lowprec (list-expr)
================================================================================
1 or die;
1, or die;
1, or => die;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lowprec_logical_expression
      (number)
      (bareword)))
  (expression_statement
    (lowprec_logical_expression
      (list_expression
        (number))
      (bareword)))
  (expression_statement
    (list_expression
      (number)
      (autoquoted_bareword)
      (bareword))))

================================================================================
autoquoting lowprec (ambiguous_func)
================================================================================
die or die;
die or => die;
die 1, or die;
die 1, or => die;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lowprec_logical_expression
      (bareword)
      (bareword)))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (autoquoted_bareword)
      (bareword)))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (number))
      (bareword)))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (number)
      (autoquoted_bareword)
      (bareword))))

================================================================================
autoquoting else blocks
================================================================================
if (1) { ... } else =>;
if (1) { ... } elsif (1) { ... } else =>;
if (1) { ... } elsif =>;
--------------------------------------------------------------------------------

(source_file
  (conditional_statement
    (number)
    (block
      (expression_statement
        (yadayada))))
  (expression_statement
    (list_expression
      (autoquoted_bareword)))
  (conditional_statement
    (number)
    (block
      (expression_statement
        (yadayada)))
    (elsif
      (number)
      (block
        (expression_statement
          (yadayada)))))
  (expression_statement
    (list_expression
      (autoquoted_bareword)))
  (conditional_statement
    (number)
    (block
      (expression_statement
        (yadayada))))
  (expression_statement
    (list_expression
      (autoquoted_bareword))))

================================================================================
unary minus autoquoting
================================================================================
-nexus;
-nexus and 1;
say -pray;
print -nexus and 1;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (autoquoted_bareword))
  (expression_statement
    (lowprec_logical_expression
      (autoquoted_bareword)
      (number)))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (autoquoted_bareword)))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (autoquoted_bareword))
      (number))))

================================================================================
unary minus autoquoting does not override builtins
================================================================================
-time;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (unary_expression
      operand: (func0op_call_expression))))

================================================================================
autoquote edge cases
================================================================================
-next =>;                 # fat comma includes the minus + overrides builtins
-sner();                  # parens beat out minus auotquote
- r;                      # minus autoquote + space beats filetest
-Package::Quoted;         # minus includes `::` in the string
$thing ? -hi:-there;      # but single colon is not included in the quote
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (list_expression
      (autoquoted_bareword)))
  (comment)
  (expression_statement
    (unary_expression
      (function_call_expression
        (function))))
  (comment)
  (expression_statement
    (autoquoted_bareword))
  (comment)
  (expression_statement
    (autoquoted_bareword))
  (comment)
  (expression_statement
    (conditional_expression
      (scalar
        (varname))
      (autoquoted_bareword)
      (autoquoted_bareword)))
  (comment))
